@@ -1,0 +1,2 @@
+@reboot sleep 60 && sudo service supervisor start
+@reboot sleep 30 && /work/scripty/misc/run_apps_when_online.sh
