@@ -1,34 +1,0 @@
-[user]
-        name = sramana
-        email = sramana9@gmail.com
-
-[color]
-        diff = auto
-        status = auto
-        branch = auto
-        interactive = auto
-        ui = true
-        pager = true
-
-[color "branch"]
-        current = yellow reverse
-        local = yellow
-        remote = green
-
-[color "diff"]
-        meta = yellow bold
-        frag = magenta bold
-        old = red bold
-        new = green bold
-
-[color "status"]
-        added = yellow
-        changed = green
-        untracked = cyan
-
-[core]
-        pager = less -FRSX
-        whitespace=fix,-indent-with-non-tab,trailing-space,cr-at-eol
-
-[alias]
-        co = checkout
