@@ -1,41 +1,0 @@
-syntax: glob
-
-*~
-*.o
-*.O
-*.exe
-*.EXE
-*.tmp
-*.TMP
-*.bkp
-*.BKP
-*.save
-*.SAVE
-*.lo
-*.la
-*.al
-libs
-*.so
-*.so.[0-9]*
-*.a
-*.pyc
-*.pyo
-*.rej
-*.swp
-\#*\#
-*.bin
-*RECYCLE*
-*Trash*
-*TRASH*
-*.orig
-*.ORIG
-*.log
-*.LOG
-*secret*
-*confidential*
-*.sqlite
-*.sqlite3
-*.db
-*.egg-info
-_build
-_dist
