@@ -1,36 +1,0 @@
-[defaults]
-addremove = --similarity 75
-
-[ui]
-username = sramana
-ignore = ~/.hgignore
-ssh = ssh -C
-
-[web]
-allow_archive = bz2 gz zip
-style = gitweb
-
-[extensions]
-fetch =
-hgext.keyword=
-hgext.convert=
-hgext.mq =
-hgk =
-hgext.bookmarks =
-hggit =
-
-[hooks]
-pre-commit.versioning = /scripts/scripty/mercurial/create_revision_file.sh
-post-push = python:/scripts/scripty/mercurial/github_mirror.py:post_push
-
-[keyword]
-** =
-
-[keywordmaps]
-Author = {author}
-Revision = {rev} ({node|short})
-Date = {date|date}
-Source = {root}/{file}
-Header = {root}/{file} {node|short} {date|date} {author}
-Id = {file|basename} {node|short} {date|date} {author}
-
